# ExpressGateway

./: .dockerignore  .gitattributes  .gitignore  .halting-gate.sha256  .trivyignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  METRICS.md  NOTICE.txt  PROMPT.md  README.md  RUNBOOK.md  SECURITY.md  deny.toml  docker-compose.yml  initialize.sh  log4j2.xml  pom.xml  run-baseline.sh  run-ci-watch.sh  run-cov-full.sh  run-cov.sh  run-d-build.sh  run-d-clippy.sh  run-d-gate.sh  run-d-reqwest.sh  run-d-tokio-revert.sh  run-d6rerun-watch.sh  run-fcap-isolate.sh  run-lint.sh  run-main-ci-watch.sh  run-p4-x3.sh  run-p4-x3f.sh  run-resoak.sh  run-watchdog.sh  run-x3-takeover.sh  (+4 more)
.cargo/: audit.toml  (+1 more)
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  error.rs  lib.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs  shutdown.rs  startup.rs
crates/compression/: Cargo.toml
crates/compression/src/: algorithm.rs  lib.rs  middleware.rs  mime.rs  negotiation.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  model.rs  watcher.rs
crates/controlplane/: Cargo.toml
crates/controlplane/src/: auth.rs  config_version.rs  error.rs  grpc.rs  ha.rs  lib.rs  node_registry.rs  reconnect_protection.rs  store.rs
crates/core/: Cargo.toml
crates/core/src/: backlog.rs  connection.rs  error.rs  health.rs  lb.rs  lib.rs  listener.rs  node.rs  protocol.rs  session.rs  types.rs
crates/lb/: Cargo.toml  build.rs
crates/lb-balancer/: Cargo.toml
crates/lb-balancer/src/: error.rs  ewma.rs  least_connections.rs  least_request.rs  lib.rs  maglev.rs  p2c.rs  random.rs  ring_hash.rs  round_robin.rs  session_affinity.rs  weighted_random.rs  weighted_round_robin.rs
crates/lb-balancer/tests/: balancer_counter_sync.rs  loom_atomic_counter.rs
crates/lb-core/: Cargo.toml
crates/lb-core/src/: authority.rs  backend.rs  cluster.rs  error.rs  lib.rs  policy.rs  shutdown.rs
crates/lb-core/tests/: per_connection_drain.rs  round8_drain_coordinator.rs  shutdown.rs
crates/lb-h1/: Cargo.toml
crates/lb-h1/src/: chunked.rs  error.rs  lib.rs  parse.rs
crates/lb-h1/tests/: proptest_parser.rs  round8_chunk_size_cve_corpus.rs  round8_header_name_rfc9110.rs
crates/lb-h2/: Cargo.toml
crates/lb-h2/src/: error.rs  frame.rs  hpack.rs  lib.rs  security.rs
crates/lb-h2/tests/: proptest_hpack.rs  round8_h2_cve_corpus.rs  round8_padded_frame.rs
crates/lb-h3/: Cargo.toml
crates/lb-h3/src/: error.rs  lib.rs  qpack.rs  security.rs
crates/lb-h3/tests/: proptest_qpack.rs
crates/lb-io/: Cargo.toml
crates/lb-io/src/: dns.rs  http2_pool.rs  idle_send.rs  lib.rs  pool.rs  quic_pool.rs  ring.rs  sockopts.rs
crates/lb-io/tests/: miri_ring.rs
crates/lb-l4-xdp/: Cargo.toml  build.rs
crates/lb-l4-xdp/ebpf/: Cargo.toml  rust-toolchain.toml
crates/lb-l4-xdp/src/: bpffs.rs  lib.rs  loader.rs  netlink_xdp.rs  nic_compat.rs  sim.rs  stats_export.rs
crates/lb-l4-xdp/tests/: elf_sections.rs  l4_xdp_conntrack.rs  loader_license_assert.rs  pod_padding.rs  real_elf.rs  round8_acl_admission.rs  round8_atomic_backends.rs  round8_attach_probe.rs  round8_attach_replace.rs  round8_backend_flags.rs  round8_backend_sentinel.rs  round8_bpffs_check.rs  round8_conntrack_state.rs  round8_ena_kernel_blocklist.rs  round8_fragments.rs  round8_netlink_xdp_query.rs  round8_ptr_at_bounds.rs  round8_synflood_cap.rs  round8_verifier_baseline_70.rs  round8_verify_xdp_gate.rs  stats_export.rs  xdp_attach_mode.rs  xdp_link_id_drop_safe.rs  xdp_pin_paths.rs
crates/lb-l7/: Cargo.toml
crates/lb-l7/src/: authority.rs  grpc_proxy.rs  h1_proxy.rs  h1_to_h1.rs  h1_to_h2.rs  h1_to_h3.rs  h2_proxy.rs  h2_security.rs  h2_to_h1.rs  h2_to_h2.rs  h2_to_h3.rs  h3_to_h1.rs  h3_to_h2.rs  h3_to_h3.rs  lib.rs  security_hooks.rs  sni_authority.rs  stripped_request.rs  trace_ctx.rs  upstream.rs  ws_proxy.rs
crates/lb-l7/tests/: bridging_h1_h1.rs  bridging_h1_h2.rs  bridging_h1_h3.rs  bridging_h2_h1.rs  bridging_h2_h2.rs  bridging_h2_h3.rs  bridging_h3_h1.rs  bridging_h3_h2.rs  bridging_h3_h3.rs  h2_authority_host_mismatch.rs  h2_connect_protocol_settings.rs  h2_to_h1_pseudo_strip.rs  hop_by_hop_set.rs  informational_responses.rs  round8_authority_enforced.rs  round8_body_overread.rs  round8_edge_defaults_table.rs  round8_glitches_enforced.rs  round8_keepalive_count_cap.rs  round8_traceparent_propagation.rs  round8_underscore_policy.rs  round8_ws_upgrade_defer.rs  round8_xff_iteration.rs  s38_h1_header_timeout.rs  smuggle_matrix.rs  smuggle_wired.rs  sni_authority_421.rs  sni_authority_mismatch.rs  stripped_request_newtype.rs  trailer_passthrough.rs
crates/lb-observability/: Cargo.toml
crates/lb-observability/src/: admin_http.rs  label_budget.rs  lib.rs  log.rs  passthrough_metrics.rs  probes.rs  prometheus_exposition.rs  quic_h3_recycle_metrics.rs  quic_modeb_metrics.rs  tracing_propagation.rs  xdp_metrics.rs
crates/lb-observability/tests/: health_endpoints.rs  log_format.rs  metrics_xdp_conntrack.rs  metrics_xdp_slots.rs  panic_total.rs  red_label_budget.rs  tracing_traceparent.rs
crates/lb-quic/: Cargo.toml
crates/lb-quic/examples/: passthrough_linkage_probe.rs
crates/lb-quic/src/: cleanup_guard.rs  conn_actor.rs  h3_bridge.rs  h3_config.rs  lib.rs  listener.rs  passthrough.rs  public_header.rs  raw_proxy.rs  router.rs  terminate_loopback.rs  udp_dataplane.rs  ws_tunnel.rs
crates/lb-security/: Cargo.toml
crates/lb-soak/: Cargo.toml
crates/metrics/: Cargo.toml
crates/pool/: Cargo.toml
crates/protocol-grpc/: Cargo.toml
crates/protocol-h3/: Cargo.toml
crates/protocol-http/: Cargo.toml
crates/protocol-tcp/: Cargo.toml
crates/protocol-udp/: Cargo.toml
crates/protocol-ws/: Cargo.toml
crates/runtime/: Cargo.toml
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/findings/: h1_parser.smoke.txt  h2_frame.smoke.txt  h3_frame.smoke.txt  quic_initial.smoke.txt  tls_client_hello.smoke.txt
fuzz/fuzz_targets/: h1_chunked.rs  h1_parser.rs  h1_request_line.rs  h2_frame.rs  h2_hpack.rs  h3_frame.rs  quic_initial.rs  quic_public_header.rs  tls_client_hello.rs
(+3346 files in other folders)
