[package]
name = "expressgateway-compression"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }
brotli.workspace = true
flate2.workspace = true
zstd.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
http.workspace = true
