[package]
name = "expressgateway-config"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }

toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
notify.workspace = true
arc-swap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
parking_lot.workspace = true
