[package]
name = "expressgateway-controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tower.workspace = true
http.workspace = true
chrono.workspace = true
arc-swap.workspace = true
futures.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true }
http-body-util = { workspace = true }
