[package]
name = "lb-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
