[package]
name = "lb-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
# CODE-2-03 Shutdown token: CancellationToken + TaskTracker. Adding the
# dep into lb-core is the workspace-wide single source so every spawn
# site can `use lb_core::Shutdown` without each crate redeclaring
# tokio-util themselves. `features = ["rt"]` is the minimum slice
# (TaskTracker + CancellationToken live in `rt`).
tokio-util = { workspace = true, features = ["rt"] }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
