[package]
name = "lb-h3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# CODE-2-11: property-based decode_frame / QPACK + varint
# round-trip / no-panic assertions. Sanity budget; CI raises via
# PROPTEST_CASES env.
proptest = { workspace = true }

[features]
default = []
proptest = []
