[package]
name = "lb-l4-xdp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

# Pillar 4a: aya userspace loader is Linux-only; keeps non-Linux targets
# (e.g. aarch64-musl CI) building against the pure-userspace simulation.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
# Pillar 4b-1: aya-obj's Object::parse is the kernel-free ELF inspector used
# by `XdpLoader::parse_object`; the real-ELF integration test runs without
# CAP_BPF because we never ask aya to create maps.
aya-obj = { workspace = true }
