[package]
name = "lb-l4-xdp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

# Pillar 4a: aya userspace loader is Linux-only; keeps non-Linux targets
# (e.g. aarch64-musl CI) building against the pure-userspace simulation.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
# Pillar 4b-1: aya-obj's Object::parse is the kernel-free ELF inspector used
# by `XdpLoader::parse_object`; the real-ELF integration test runs without
# CAP_BPF because we never ask aya to create maps.
aya-obj = { workspace = true }

# EBPF-2-01: `object` is a no_std-friendly ELF parser. Already a
# transitive dep of `aya-obj`, so this entry pulls a fresh dev-dep view
# without adding a new crate to the lockfile graph.
[target.'cfg(target_os = "linux")'.dev-dependencies]
object = { version = "0.36", default-features = false, features = ["read", "std"] }
